--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,19 @@
+certifi==2024.8.30
+charset-normalizer==3.4.0
+docker==7.1.0
+idna==3.10
+linkify-it-py==2.0.3
+markdown-it-py==3.0.0
+mdit-py-plugins==0.4.2
+mdurl==0.1.2
+platformdirs==4.3.6
 prettytable==3.11.0
+Pygments==2.18.0
+requests==2.32.3
+rich==13.9.4
+textual==0.85.2
+textualize==0.1
+typing_extensions==4.12.2
+uc-micro-py==1.0.3
+urllib3==2.2.3
 wcwidth==0.2.13
